parser/interpreter.output
Terminales no usados en la gramática

   BOOL
   UNDEFINED


Estado 24 conflictos: 1 desplazamiento/reducción


Gramática

    0 $accept: program $end

    1 program: stmtlist

    2 stmtlist: %empty
    3         | stmtlist stmt
    4         | stmtlist error

    5 stmt: SEMICOLON
    6     | asgn SEMICOLON
    7     | asgn
    8     | print SEMICOLON
    9     | read SEMICOLON
   10     | if
   11     | while
   12     | repeat
   13     | for
   14     | erase SEMICOLON
   15     | place SEMICOLON

   16 if: IF cond THEN stmtlist ENDIF
   17   | IF cond THEN stmtlist ELSE stmtlist ENDIF
   18   | IF cond stmtlist ENDIF
   19   | IF cond stmtlist ELSE stmtlist ENDIF

   20 while: WHILE cond DO stmtlist ENDWHILE
   21      | WHILE cond stmtlist ENDWHILE

   22 repeat: REPEAT stmtlist UNTIL cond

   23 for: FOR VARIABLE FROM exp UNTIL exp STEP exp DO stmtlist ENDFOR
   24    | FOR VARIABLE FROM exp UNTIL exp DO stmtlist ENDFOR
   25    | FOR STRING FROM exp UNTIL exp DO stmtlist ENDFOR
   26    | FOR STRING FROM exp UNTIL exp STEP exp DO stmtlist ENDFOR
   27    | FOR NUMBER FROM exp UNTIL exp DO stmtlist ENDFOR
   28    | FOR NUMBER FROM exp UNTIL exp STEP exp DO stmtlist ENDFOR

   29 cond: LPAREN exp RPAREN

   30 erase: ERASE

   31 place: PLACE LPAREN exp COMMA exp RPAREN

   32 asgn: VARIABLE ASSIGNMENT exp
   33     | VARIABLE ASSIGNMENT asgn
   34     | CONSTANT ASSIGNMENT exp
   35     | CONSTANT ASSIGNMENT asgn

   36 print: PRINT LPAREN exp RPAREN

   37 read: READ LPAREN VARIABLE RPAREN
   38     | READ_STRING LPAREN VARIABLE RPAREN
   39     | READ LPAREN CONSTANT RPAREN
   40     | READ_STRING LPAREN CONSTANT RPAREN

   41 exp: NUMBER
   42    | STRING
   43    | exp PLUS exp
   44    | exp MINUS exp
   45    | exp MULTIPLICATION exp
   46    | exp DIVISION exp
   47    | exp INTEGER_DIVISION exp
   48    | LPAREN exp RPAREN
   49    | PLUS exp
   50    | MINUS exp
   51    | exp MODULO exp
   52    | exp POWER exp
   53    | VARIABLE
   54    | CONSTANT
   55    | exp CONCATENATE exp
   56    | BUILTIN LPAREN listOfExp RPAREN
   57    | exp GREATER_THAN exp
   58    | exp GREATER_OR_EQUAL exp
   59    | exp LESS_THAN exp
   60    | exp LESS_OR_EQUAL exp
   61    | exp EQUAL exp
   62    | exp NOT_EQUAL exp
   63    | exp AND exp
   64    | exp OR exp
   65    | NOT exp

   66 listOfExp: %empty
   67          | exp restOfListOfExp

   68 restOfListOfExp: %empty
   69                | COMMA exp restOfListOfExp


Terminales con las reglas donde aparecen

$end (0) 0
error (256) 4
SEMICOLON (258) 5 6 8 9 14 15
PRINT (259) 36
READ (260) 37 39
READ_STRING (261) 38 40
IF (262) 16 17 18 19
THEN (263) 16 17
ELSE (264) 17 19
ENDIF (265) 16 17 18 19
WHILE (266) 20 21
DO (267) 20 23 24 25 26 27 28
ENDWHILE (268) 20 21
REPEAT (269) 22
UNTIL (270) 22 23 24 25 26 27 28
FOR (271) 23 24 25 26 27 28
FROM (272) 23 24 25 26 27 28
STEP (273) 23 26 28
ENDFOR (274) 23 24 25 26 27 28
ERASE (275) 30
PLACE (276) 31
ASSIGNMENT (277) 32 33 34 35
COMMA (278) 31 69
NUMBER (279) 27 28 41
STRING (280) 25 26 42
BOOL (281)
VARIABLE (282) 23 24 32 33 37 38 53
UNDEFINED (283)
CONSTANT (284) 34 35 39 40 54
BUILTIN (285) 56
OR (286) 64
AND (287) 63
CONCATENATE (288) 55
GREATER_OR_EQUAL (289) 58
LESS_OR_EQUAL (290) 60
GREATER_THAN (291) 57
LESS_THAN (292) 59
EQUAL (293) 61
NOT_EQUAL (294) 62
NOT (295) 65
PLUS (296) 43 49
MINUS (297) 44 50
MULTIPLICATION (298) 45
INTEGER_DIVISION (299) 47
DIVISION (300) 46
MODULO (301) 51
LPAREN (302) 29 31 36 37 38 39 40 48 56
RPAREN (303) 29 31 36 37 38 39 40 48 56
UNARY (304)
POWER (305) 52


No terminales con las reglas donde aparecen

$accept (51)
    en la izquierda: 0
program (52)
    en la izquierda: 1, en la derecha: 0
stmtlist (53)
    en la izquierda: 2 3 4, en la derecha: 1 3 4 16 17 18 19 20 21
    22 23 24 25 26 27 28
stmt (54)
    en la izquierda: 5 6 7 8 9 10 11 12 13 14 15, en la derecha: 3
if (55)
    en la izquierda: 16 17 18 19, en la derecha: 10
while (56)
    en la izquierda: 20 21, en la derecha: 11
repeat (57)
    en la izquierda: 22, en la derecha: 12
for (58)
    en la izquierda: 23 24 25 26 27 28, en la derecha: 13
cond (59)
    en la izquierda: 29, en la derecha: 16 17 18 19 20 21 22
erase (60)
    en la izquierda: 30, en la derecha: 14
place (61)
    en la izquierda: 31, en la derecha: 15
asgn (62)
    en la izquierda: 32 33 34 35, en la derecha: 6 7 33 35
print (63)
    en la izquierda: 36, en la derecha: 8
read (64)
    en la izquierda: 37 38 39 40, en la derecha: 9
exp (65)
    en la izquierda: 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56
    57 58 59 60 61 62 63 64 65, en la derecha: 23 24 25 26 27 28 29
    31 32 34 36 43 44 45 46 47 48 49 50 51 52 55 57 58 59 60 61 62
    63 64 65 67 69
listOfExp (66)
    en la izquierda: 66 67, en la derecha: 56
restOfListOfExp (67)
    en la izquierda: 68 69, en la derecha: 67 69


Estado 0

    0 $accept: . program $end

    $default  reduce usando la regla 2 (stmtlist)

    program   ir al estado 1
    stmtlist  ir al estado 2


Estado 1

    0 $accept: program . $end

    $end  desplazar e ir al estado 3


Estado 2

    1 program: stmtlist .
    3 stmtlist: stmtlist . stmt
    4         | stmtlist . error

    error        desplazar e ir al estado 4
    SEMICOLON    desplazar e ir al estado 5
    PRINT        desplazar e ir al estado 6
    READ         desplazar e ir al estado 7
    READ_STRING  desplazar e ir al estado 8
    IF           desplazar e ir al estado 9
    WHILE        desplazar e ir al estado 10
    REPEAT       desplazar e ir al estado 11
    FOR          desplazar e ir al estado 12
    ERASE        desplazar e ir al estado 13
    PLACE        desplazar e ir al estado 14
    VARIABLE     desplazar e ir al estado 15
    CONSTANT     desplazar e ir al estado 16

    $end  reduce usando la regla 1 (program)

    stmt    ir al estado 17
    if      ir al estado 18
    while   ir al estado 19
    repeat  ir al estado 20
    for     ir al estado 21
    erase   ir al estado 22
    place   ir al estado 23
    asgn    ir al estado 24
    print   ir al estado 25
    read    ir al estado 26


Estado 3

    0 $accept: program $end .

    $default  aceptar


Estado 4

    4 stmtlist: stmtlist error .

    $default  reduce usando la regla 4 (stmtlist)


Estado 5

    5 stmt: SEMICOLON .

    $default  reduce usando la regla 5 (stmt)


Estado 6

   36 print: PRINT . LPAREN exp RPAREN

    LPAREN  desplazar e ir al estado 27


Estado 7

   37 read: READ . LPAREN VARIABLE RPAREN
   39     | READ . LPAREN CONSTANT RPAREN

    LPAREN  desplazar e ir al estado 28


Estado 8

   38 read: READ_STRING . LPAREN VARIABLE RPAREN
   40     | READ_STRING . LPAREN CONSTANT RPAREN

    LPAREN  desplazar e ir al estado 29


Estado 9

   16 if: IF . cond THEN stmtlist ENDIF
   17   | IF . cond THEN stmtlist ELSE stmtlist ENDIF
   18   | IF . cond stmtlist ENDIF
   19   | IF . cond stmtlist ELSE stmtlist ENDIF

    LPAREN  desplazar e ir al estado 30

    cond  ir al estado 31


Estado 10

   20 while: WHILE . cond DO stmtlist ENDWHILE
   21      | WHILE . cond stmtlist ENDWHILE

    LPAREN  desplazar e ir al estado 30

    cond  ir al estado 32


Estado 11

   22 repeat: REPEAT . stmtlist UNTIL cond

    $default  reduce usando la regla 2 (stmtlist)

    stmtlist  ir al estado 33


Estado 12

   23 for: FOR . VARIABLE FROM exp UNTIL exp STEP exp DO stmtlist ENDFOR
   24    | FOR . VARIABLE FROM exp UNTIL exp DO stmtlist ENDFOR
   25    | FOR . STRING FROM exp UNTIL exp DO stmtlist ENDFOR
   26    | FOR . STRING FROM exp UNTIL exp STEP exp DO stmtlist ENDFOR
   27    | FOR . NUMBER FROM exp UNTIL exp DO stmtlist ENDFOR
   28    | FOR . NUMBER FROM exp UNTIL exp STEP exp DO stmtlist ENDFOR

    NUMBER    desplazar e ir al estado 34
    STRING    desplazar e ir al estado 35
    VARIABLE  desplazar e ir al estado 36


Estado 13

   30 erase: ERASE .

    $default  reduce usando la regla 30 (erase)


Estado 14

   31 place: PLACE . LPAREN exp COMMA exp RPAREN

    LPAREN  desplazar e ir al estado 37


Estado 15

   32 asgn: VARIABLE . ASSIGNMENT exp
   33     | VARIABLE . ASSIGNMENT asgn

    ASSIGNMENT  desplazar e ir al estado 38


Estado 16

   34 asgn: CONSTANT . ASSIGNMENT exp
   35     | CONSTANT . ASSIGNMENT asgn

    ASSIGNMENT  desplazar e ir al estado 39


Estado 17

    3 stmtlist: stmtlist stmt .

    $default  reduce usando la regla 3 (stmtlist)


Estado 18

   10 stmt: if .

    $default  reduce usando la regla 10 (stmt)


Estado 19

   11 stmt: while .

    $default  reduce usando la regla 11 (stmt)


Estado 20

   12 stmt: repeat .

    $default  reduce usando la regla 12 (stmt)


Estado 21

   13 stmt: for .

    $default  reduce usando la regla 13 (stmt)


Estado 22

   14 stmt: erase . SEMICOLON

    SEMICOLON  desplazar e ir al estado 40


Estado 23

   15 stmt: place . SEMICOLON

    SEMICOLON  desplazar e ir al estado 41


Estado 24

    6 stmt: asgn . SEMICOLON
    7     | asgn .

    SEMICOLON  desplazar e ir al estado 42

    SEMICOLON  [reduce usando la regla 7 (stmt)]
    $default   reduce usando la regla 7 (stmt)


Estado 25

    8 stmt: print . SEMICOLON

    SEMICOLON  desplazar e ir al estado 43


Estado 26

    9 stmt: read . SEMICOLON

    SEMICOLON  desplazar e ir al estado 44


Estado 27

   36 print: PRINT LPAREN . exp RPAREN

    NUMBER    desplazar e ir al estado 45
    STRING    desplazar e ir al estado 46
    VARIABLE  desplazar e ir al estado 47
    CONSTANT  desplazar e ir al estado 48
    BUILTIN   desplazar e ir al estado 49
    NOT       desplazar e ir al estado 50
    PLUS      desplazar e ir al estado 51
    MINUS     desplazar e ir al estado 52
    LPAREN    desplazar e ir al estado 53

    exp  ir al estado 54


Estado 28

   37 read: READ LPAREN . VARIABLE RPAREN
   39     | READ LPAREN . CONSTANT RPAREN

    VARIABLE  desplazar e ir al estado 55
    CONSTANT  desplazar e ir al estado 56


Estado 29

   38 read: READ_STRING LPAREN . VARIABLE RPAREN
   40     | READ_STRING LPAREN . CONSTANT RPAREN

    VARIABLE  desplazar e ir al estado 57
    CONSTANT  desplazar e ir al estado 58


Estado 30

   29 cond: LPAREN . exp RPAREN

    NUMBER    desplazar e ir al estado 45
    STRING    desplazar e ir al estado 46
    VARIABLE  desplazar e ir al estado 47
    CONSTANT  desplazar e ir al estado 48
    BUILTIN   desplazar e ir al estado 49
    NOT       desplazar e ir al estado 50
    PLUS      desplazar e ir al estado 51
    MINUS     desplazar e ir al estado 52
    LPAREN    desplazar e ir al estado 53

    exp  ir al estado 59


Estado 31

   16 if: IF cond . THEN stmtlist ENDIF
   17   | IF cond . THEN stmtlist ELSE stmtlist ENDIF
   18   | IF cond . stmtlist ENDIF
   19   | IF cond . stmtlist ELSE stmtlist ENDIF

    THEN  desplazar e ir al estado 60

    $default  reduce usando la regla 2 (stmtlist)

    stmtlist  ir al estado 61


Estado 32

   20 while: WHILE cond . DO stmtlist ENDWHILE
   21      | WHILE cond . stmtlist ENDWHILE

    DO  desplazar e ir al estado 62

    $default  reduce usando la regla 2 (stmtlist)

    stmtlist  ir al estado 63


Estado 33

    3 stmtlist: stmtlist . stmt
    4         | stmtlist . error
   22 repeat: REPEAT stmtlist . UNTIL cond

    error        desplazar e ir al estado 4
    SEMICOLON    desplazar e ir al estado 5
    PRINT        desplazar e ir al estado 6
    READ         desplazar e ir al estado 7
    READ_STRING  desplazar e ir al estado 8
    IF           desplazar e ir al estado 9
    WHILE        desplazar e ir al estado 10
    REPEAT       desplazar e ir al estado 11
    UNTIL        desplazar e ir al estado 64
    FOR          desplazar e ir al estado 12
    ERASE        desplazar e ir al estado 13
    PLACE        desplazar e ir al estado 14
    VARIABLE     desplazar e ir al estado 15
    CONSTANT     desplazar e ir al estado 16

    stmt    ir al estado 17
    if      ir al estado 18
    while   ir al estado 19
    repeat  ir al estado 20
    for     ir al estado 21
    erase   ir al estado 22
    place   ir al estado 23
    asgn    ir al estado 24
    print   ir al estado 25
    read    ir al estado 26


Estado 34

   27 for: FOR NUMBER . FROM exp UNTIL exp DO stmtlist ENDFOR
   28    | FOR NUMBER . FROM exp UNTIL exp STEP exp DO stmtlist ENDFOR

    FROM  desplazar e ir al estado 65


Estado 35

   25 for: FOR STRING . FROM exp UNTIL exp DO stmtlist ENDFOR
   26    | FOR STRING . FROM exp UNTIL exp STEP exp DO stmtlist ENDFOR

    FROM  desplazar e ir al estado 66


Estado 36

   23 for: FOR VARIABLE . FROM exp UNTIL exp STEP exp DO stmtlist ENDFOR
   24    | FOR VARIABLE . FROM exp UNTIL exp DO stmtlist ENDFOR

    FROM  desplazar e ir al estado 67


Estado 37

   31 place: PLACE LPAREN . exp COMMA exp RPAREN

    NUMBER    desplazar e ir al estado 45
    STRING    desplazar e ir al estado 46
    VARIABLE  desplazar e ir al estado 47
    CONSTANT  desplazar e ir al estado 48
    BUILTIN   desplazar e ir al estado 49
    NOT       desplazar e ir al estado 50
    PLUS      desplazar e ir al estado 51
    MINUS     desplazar e ir al estado 52
    LPAREN    desplazar e ir al estado 53

    exp  ir al estado 68


Estado 38

   32 asgn: VARIABLE ASSIGNMENT . exp
   33     | VARIABLE ASSIGNMENT . asgn

    NUMBER    desplazar e ir al estado 45
    STRING    desplazar e ir al estado 46
    VARIABLE  desplazar e ir al estado 69
    CONSTANT  desplazar e ir al estado 70
    BUILTIN   desplazar e ir al estado 49
    NOT       desplazar e ir al estado 50
    PLUS      desplazar e ir al estado 51
    MINUS     desplazar e ir al estado 52
    LPAREN    desplazar e ir al estado 53

    asgn  ir al estado 71
    exp   ir al estado 72


Estado 39

   34 asgn: CONSTANT ASSIGNMENT . exp
   35     | CONSTANT ASSIGNMENT . asgn

    NUMBER    desplazar e ir al estado 45
    STRING    desplazar e ir al estado 46
    VARIABLE  desplazar e ir al estado 69
    CONSTANT  desplazar e ir al estado 70
    BUILTIN   desplazar e ir al estado 49
    NOT       desplazar e ir al estado 50
    PLUS      desplazar e ir al estado 51
    MINUS     desplazar e ir al estado 52
    LPAREN    desplazar e ir al estado 53

    asgn  ir al estado 73
    exp   ir al estado 74


Estado 40

   14 stmt: erase SEMICOLON .

    $default  reduce usando la regla 14 (stmt)


Estado 41

   15 stmt: place SEMICOLON .

    $default  reduce usando la regla 15 (stmt)


Estado 42

    6 stmt: asgn SEMICOLON .

    $default  reduce usando la regla 6 (stmt)


Estado 43

    8 stmt: print SEMICOLON .

    $default  reduce usando la regla 8 (stmt)


Estado 44

    9 stmt: read SEMICOLON .

    $default  reduce usando la regla 9 (stmt)


Estado 45
